crates/rumps-query/snapshots/scripts__361_range_read_noncontiguous_err.snap
---
source: crates/rumps-query/tests/scripts.rs
description: "fun main() {\n  let r = [1, 3] read Range\n  write r\n}\n"
---
Result.Err("expected contiguous range")
