crates/rumps-query/snapshots/scripts__362_array_sort_non_ord_err.snap
---
source: crates/rumps-query/tests/scripts.rs
description: "fun main() {\n  write Array.sort([{ a: 1 }, { a: 2 }])\n}\n"
---
ERROR: type `{ a: Int }` does not satisfy `Ord` class
