crates/rumps-query/snapshots/scripts__375_assoc_type_param_indexable.snap
---
source: crates/rumps-query/tests/scripts.rs
description: "newtype Box[K, V] = Map[K, V]\n\nclass Indexable[V] for Box[K, V] {\n  newtype Index = K\n\n  fun index(b: Box[K, V], i: :Index) -> V {\n    b[i]\n  }\n\n  fun get(b: Box[K, V], i: Indexable:Index) -> Option[V] {\n    b?[i]\n  }\n}\n\nfun main() {\n  let bs = ({ \"a\" => 10, \"b\" => 20 } : Box[String, Int])\n  let direct-s: Int = Indexable:index(bs, \"a\")\n  let get-s: Option[Int] = Indexable:get(bs, \"b\")\n  let sub-s: Int = bs[\"b\"]\n  let safe-s: Option[Int] = bs?[\"missing\"]\n  write direct-s\n  write get-s\n  write sub-s\n  write safe-s\n\n  let bi = ({ 1 => \"one\", 2 => \"two\" } : Box[Int, String])\n  let direct-i: String = Indexable:index(bi, 1)\n  let get-i: Option[String] = Indexable:get(bi, 2)\n  let sub-i: String = bi[2]\n  let safe-i: Option[String] = bi?[3]\n  write direct-i\n  write get-i\n  write sub-i\n  write safe-i\n}\n"
---
10
Option.Some(20)
20
Option.None
"one"
Option.Some("two")
"two"
Option.None
