crates/rumps-query/snapshots/scripts__376_assoc_type_param_indexable_err.snap
---
source: crates/rumps-query/tests/scripts.rs
description: "newtype Box[K, V] = Map[K, V]\n\nclass Indexable[V] for Box[K, V] {\n  newtype Index = K\n\n  fun index(b: Box[K, V], i: :Index) -> V {\n    b[i]\n  }\n\n  fun get(b: Box[K, V], i: Indexable:Index) -> Option[V] {\n    b?[i]\n  }\n}\n\nfun main() {\n  let b = ({ \"a\" => 10 } : Box[String, Int])\n  write Indexable:index(b, 1)\n}\n"
---
ERROR: cannot use a class method while defining that class for the same type
cannot use a class method while defining that class for the same type
type `String` does not satisfy `Numeric` class
